Changes on the minimal reset stylesheet.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="fs:1r lh:1.5 ff:ss bw:0 h:100% bs:bb">
+<html lang="en" class="fs:1r lh:1.5 ff:ss bw:0 h:100% bs:bb bs:s">
 
 <head>
 	<meta charset="utf-8">
