Fixed padding on some demos.

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 					<h3 class="d:ib ff:m bgc:b c:w p:1r">font-size</h3>
 					<div class="br:100% p:.5r bgc:w c:red h:2r w:2r d:f ai:c jc:c p:a t:0 r:0 bs:.0625r">R</div>
 				</header>
-				<div class="ox:s ws:nw brw:medium brw:0@lg">
+				<div class="ox:s ws:nw brw:medium brw:0@lg py:1r">
 					<p class="lh:.875"> <span class="fs:16r">16rem</span> <code>fs:16r</code> </p>
 					<p class="lh:1"> <span class="fs:8r">8rem</span> <code>fs:8r</code> </p>
 					<p class="lh:1"> <span class="fs:4r">4rem</span> <code>fs:4r</code> </p>
@@ -141,7 +141,7 @@
 			<article id="typo__font-weight">
 				<header>
 					<h3 class="d:ib ff:m bgc:b c:w p:1r">font-weight</h3> </header>
-				<div class="ox:s ws:nw lh:1 brw:medium brw:0@lg">
+				<div class="ox:s ws:nw lh:1 brw:medium brw:0@lg py:1r">
 					<p> <span class="fw:i fs:2r fs:4r@md">initial</span> <code>fw:i</code> </p>
 					<p> <span class="fw:l fs:2r fs:4r@md">lighter</span> <code>fw:l</code> </p>
 					<p> <span class="fw:n fs:2r fs:4r@md">normal</span> <code>fw:n</code> </p>
@@ -484,7 +484,7 @@
 					<div class="h:8r c:w bgc:b d:ib">8rem</div> <code>h:8r</code>
 					<div class="h:16r c:w bgc:b d:ib">16rem</div> <code>h:16r</code>
 					<hr>
-					<div class="h:8r ox:s ws:nw brw:medium brw:0@md">
+					<div class="h:8r ox:s ws:nw brw:medium brw:0@lg">
 						<div class="h:25% c:w bgc:b d:ib">25% (&frac14;)</div> <code>h:25%</code>
 						<div class="h:33% c:w bgc:b d:ib">33.3333% (&frac13;)</div> <code>h:33%</code>
 						<div class="h:50% c:w bgc:b d:ib">50% (&frac12;)</div> <code>h:50%</code>
@@ -492,7 +492,7 @@
 						<div class="h:75% c:w bgc:b d:ib">75% (&frac34;)</div> <code>h:75%</code>
 						<div class="h:100% c:w bgc:b d:ib">100%</div> <code>h:100%</code> </div>
 					<hr>
-					<div class="ox:s ws:nw brw:medium brw:0@md">
+					<div class="ox:s ws:nw brw:medium brw:0@lg">
 						<div class="h:25vh c:w bgc:b d:ib">25vh (&frac14;)</div> <code>h:25vh</code>
 						<div class="h:33vh c:w bgc:b d:ib">33.3333vh (&frac13;)</div> <code>h:33vh</code>
 						<div class="h:50vh c:w bgc:b d:ib">50vh (&frac12;)</div> <code>h:50vh</code>
