Moved all css modules to the blinkUI repository and cleaned up.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>blink | docs</title>
 	<link href="css/blank_minimal.css" rel="stylesheet">
 	<link href="css/layout.css" rel="stylesheet">
-	<link href="css/blink.css" rel="stylesheet">
+	<link href="https://gitcdn.link/repo/blinkui/blinkui/master/src/blink.css" rel="stylesheet">
 	<link rel="apple-touch-icon" href="blink.png">
 	<link rel="mask-icon" href="blink_icon.svg" color="#f53d5c">
 	<link rel="icon" href="blink_icon.png">
@@ -1076,7 +1076,7 @@
 			<article id="theme__box-shadow">
 				<header class="p:r">
 					<h3 class="d:ib ff:m bgc:b c:w p:1r">box-shadow</h3>
-					<div class="br:100% p:.5r bgc:w c:violet h:2r w:2r d:f ai:c jc:c p:a t:0 r:0 bs:.0625r">H</div>
+					<div class="br:100% p:.5r bgc:w c:purple h:2r w:2r d:f ai:c jc:c p:a t:0 r:0 bs:.0625r">H</div>
 				</header>
 				<p>Including <b>hover classes</b>: <code>bs:.25r:h</code> <br>Hover over the circles for a demo.</p>
 				<div class="d:f fw:w mr_1r">
@@ -1102,8 +1102,8 @@
 					<div class="p:1r c:cyan bw:thick fb:20% ta:c"> cyan <br> <code>c:cyan</code> </div>
 					<div class="p:1r c:blue bw:thick fb:20% ta:c"> blue <br> <code>c:blue</code> </div>
 					<div class="p:1r c:indigo bw:thick fb:20% ta:c"> indigo <br> <code>c:indigo</code> </div>
-					<div class="p:1r c:violet bw:thick fb:20% ta:c"> violet <br> <code>c:violet</code> </div>
-					<div class="p:1r c:magenta bw:thick fb:20% ta:c"> magenta <br> <code>c:magenta</code> </div>
+					<div class="p:1r c:purple bw:thick fb:20% ta:c"> purple <br> <code>c:purple</code> </div>
+					<div class="p:1r c:rose bw:thick fb:20% ta:c"> rose <br> <code>c:rose</code> </div>
 					<div class="p:1r c:pink bw:thick fb:20% ta:c"> pink <br> <code>c:pink</code> </div>
 				</div>
 				<!-- shades of black -->
@@ -1151,8 +1151,8 @@
 					<div class="p:1r bgc:cyan bw:medium fb:20% ta:c"> cyan <br> <code>bgc:cyan</code> </div>
 					<div class="p:1r bgc:blue bw:medium fb:20% ta:c"> blue <br> <code>bgc:blue</code> </div>
 					<div class="p:1r bgc:indigo bw:medium fb:20% ta:c"> indigo <br> <code>bgc:indigo</code> </div>
-					<div class="p:1r bgc:violet bw:medium fb:20% ta:c"> violet <br> <code>bgc:violet</code> </div>
-					<div class="p:1r bgc:magenta bw:medium fb:20% ta:c"> magenta <br> <code>bgc:magenta</code> </div>
+					<div class="p:1r bgc:purple bw:medium fb:20% ta:c"> purple <br> <code>bgc:purple</code> </div>
+					<div class="p:1r bgc:rose bw:medium fb:20% ta:c"> rose <br> <code>bgc:rose</code> </div>
 					<div class="p:1r bgc:pink bw:medium fb:20% ta:c"> pink <br> <code>bgc:pink</code> </div>
 					<div class="p:1r bgc:brown bw:medium fb:20% ta:c"> brown <br> <code>bgc:brown</code> </div>
 				</div>
@@ -1185,7 +1185,7 @@
 					<div class="p:1r bgc:w.1 bw:medium fb:20% ta:c bc:w"> white .1 <br> <code>bgc:w.1</code> </div>
 				</div> <small>The white shades are placed on a black background in order to show the blending effect.</small>
 				<!-- overlay demo -->
-				<h4>Creating tints with a little parent/child nesting trick</h4>
+				<h4 class="mt:2r">Creating tints with a little parent/child nesting trick</h4>
 				<p>For example: <code>bgc:blue + bgc:w.9</code></p>
 				<div class="bgc:blue d:f@lg">
 					<div class="p:1r bgc:w.9"></div>
@@ -1224,8 +1224,8 @@
 					<div class="p:1r bc:cyan bw:thick fb:20% ta:c"> cyan <br> <code>bc:cyan</code> </div>
 					<div class="p:1r bc:blue bw:thick fb:20% ta:c"> blue <br> <code>bc:blue</code> </div>
 					<div class="p:1r bc:indigo bw:thick fb:20% ta:c"> indigo <br> <code>bc:indigo</code> </div>
-					<div class="p:1r bc:violet bw:thick fb:20% ta:c"> violet <br> <code>bc:violet</code> </div>
-					<div class="p:1r bc:magenta bw:thick fb:20% ta:c"> magenta <br> <code>bc:magenta</code> </div>
+					<div class="p:1r bc:purple bw:thick fb:20% ta:c"> purple <br> <code>bc:purple</code> </div>
+					<div class="p:1r bc:rose bw:thick fb:20% ta:c"> rose <br> <code>bc:rose</code> </div>
 					<div class="p:1r bc:pink bw:thick fb:20% ta:c"> pink <br> <code>bc:pink</code> </div>
 					<div class="p:1r bc:brown bw:thick fb:20% ta:c"> brown <br> <code>bc:brown</code> </div>
 				</div>
@@ -1272,8 +1272,8 @@
 					<div class="p:1r bgi:cyan bw:medium fb:20% ta:c bc:t"> cyan <br> <code>bgi:cyan</code> </div>
 					<div class="p:1r bgi:blue bw:medium fb:20% ta:c bc:t"> blue <br> <code>bgi:blue</code> </div>
 					<div class="p:1r bgi:indigo bw:medium fb:20% ta:c bc:t"> indigo <br> <code>bgi:indigo</code> </div>
-					<div class="p:1r bgi:violet bw:medium fb:20% ta:c bc:t"> violet <br> <code>bgi:violet</code> </div>
-					<div class="p:1r bgi:magenta bw:medium fb:20% ta:c bc:t"> magenta <br> <code>bgi:magenta</code> </div>
+					<div class="p:1r bgi:purple bw:medium fb:20% ta:c bc:t"> purple <br> <code>bgi:purple</code> </div>
+					<div class="p:1r bgi:rose bw:medium fb:20% ta:c bc:t"> rose <br> <code>bgi:rose</code> </div>
 					<div class="p:1r bgi:pink bw:medium fb:20% ta:c bc:t"> pink <br> <code>bgi:pink</code> </div>
 					<div class="p:1r bgi:brown bw:medium fb:20% ta:c bc:t"> brown <br> <code>bgi:brown</code> </div>
 				</div>
@@ -1292,8 +1292,8 @@
 					<div class="p:1r bi:cyan bw:thick fb:20% ta:c"> cyan <br> <code>bi:cyan</code> </div>
 					<div class="p:1r bi:blue bw:thick fb:20% ta:c"> blue <br> <code>bi:blue</code> </div>
 					<div class="p:1r bi:indigo bw:thick fb:20% ta:c"> indigo <br> <code>bi:indigo</code> </div>
-					<div class="p:1r bi:violet bw:thick fb:20% ta:c"> violet <br> <code>bi:violet</code> </div>
-					<div class="p:1r bi:magenta bw:thick fb:20% ta:c"> magenta <br> <code>bi:magenta</code> </div>
+					<div class="p:1r bi:purple bw:thick fb:20% ta:c"> purple <br> <code>bi:purple</code> </div>
+					<div class="p:1r bi:rose bw:thick fb:20% ta:c"> rose <br> <code>bi:rose</code> </div>
 					<div class="p:1r bi:pink bw:thick fb:20% ta:c"> pink <br> <code>bi:pink</code> </div>
 					<div class="p:1r bi:brown bw:thick fb:20% ta:c"> brown <br> <code>bi:brown</code> </div>
 				</div>
@@ -1301,7 +1301,7 @@
 			<article id="theme__opacity">
 				<header class="p:r">
 					<h3 class="d:ib ff:m bgc:b c:w p:1r">opacity</h3>
-					<div class="br:100% p:.5r bgc:w c:violet h:2r w:2r d:f ai:c jc:c p:a t:0 r:0 bs:.0625r">H</div>
+					<div class="br:100% p:.5r bgc:w c:purple h:2r w:2r d:f ai:c jc:c p:a t:0 r:0 bs:.0625r">H</div>
 				</header>
 				<div class="ta:c">
 					<div><span class="o:i o:.1:h p:r r:1r py:.5r px:2r bw:thin bgc:b c:w w:4r fs:1.5r">initial</span> <code>o:i</code></div>
