Fixed margin-child demos.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 	</header>
 	<nav id="toc" class="mb:2r p:2r ox:s ws:nw brw:medium brw:0@xl bc:red c:b.3 fs:1.5r@xl">
 		<ul class="lst:n">
-			<li class="d:f mr_1r mb_1r"> <b><a href="#typo">Typography</a></b>
+			<li class="d:f mr_1r mb>*:1r"> <b><a href="#typo">Typography</a></b>
 				<ul class="lst:n d:f mr_.5r">
 					<li><a href="#typo__font-family">font-family</a></li>
 					<li><a href="#typo__font-size">font-size</a></li>
@@ -42,7 +42,7 @@
 					<li><a href="#typo__list-style-type">list-style-type</a></li>
 				</ul>
 			</li>
-			<li class="d:f mr_1r mb_1r"> <b><a href="#layout">Layout: Spacing &amp; dimensions</a></b>
+			<li class="d:f mr_1r mb>*:1r"> <b><a href="#layout">Layout: Spacing &amp; dimensions</a></b>
 				<ul class="lst:n d:f mr_1r">
 					<li><a href="#layout__margin">margin</a></li>
 					<li><a href="#layout__padding">padding</a></li>
@@ -51,7 +51,7 @@
 					<li><a href="#layout__height">height</a></li>
 					<li><a href="#layout__box-sizing">box-sizing</a></li>
 				</ul>
-				<li class="d:f mr_1r mb_1r"> <b><a href="#layout">Layout: Positioning</a></b>
+				<li class="d:f mr_1r mb>*:1r"> <b><a href="#layout">Layout: Positioning</a></b>
 					<ul class="lst:n d:f mr_1r">
 						<li><a href="#layout__display">display</a></li>
 						<li><a href="#layout__position">position</a></li>
@@ -67,7 +67,7 @@
 						<li><a href="#layout__white-space">white-space</a></li>
 					</ul>
 				</li>
-				<li class="d:f mr_1r mb_1r"> <b><a href="#layout__flexbox">Layout: Flexbox</a></b>
+				<li class="d:f mr_1r mb>*:1r"> <b><a href="#layout__flexbox">Layout: Flexbox</a></b>
 					<ul class="lst:n d:f mr_1r">
 						<li><a href="#layout__flex-direction">flex-direction</a></li>
 						<li><a href="#layout__flex-wrap">flex-wrap</a></li>
@@ -743,7 +743,7 @@
 			<article id="layout__flex-wrap">
 				<header>
 					<h3 class="d:ib ff:m bgc:b c:w p:1r">flex-wrap</h3> </header>
-				<div class="mb_1r d:f fw:w mr_1r">
+				<div class="mb>*:1r d:f fw:w mr_1r">
 					<div class="d:f fw:nw mw:16r p:2r bw:medium ox:s">
 						<div class="mr:1r">nowrap (default) <code>fw:nw</code></div>
 						<div class="fg:0 fs:0 h:1r w:1r br:100% bgc:b m:.25r"></div>
@@ -794,7 +794,7 @@
 			<article id="layout__justify-content">
 				<header>
 					<h3 class="d:ib ff:m bgc:b c:w p:1r">justify-content</h3> </header>
-				<div class="mb_1r d:f fw:w mr_1r">
+				<div class="mb>*:1r d:f fw:w mr_1r">
 					<div class="d:f jc:fs fw:w mw:16r p:2r bw:medium">
 						<div class="mr:1r">flex-start <code>jc:fs</code></div>
 						<div class="fg:0 fs:0 h:1r w:1r br:100% bgc:b m:.25r"></div>
@@ -875,7 +875,7 @@
 			<article id="layout__align-items">
 				<header>
 					<h3 class="d:ib ff:m bgc:b c:w p:1r">align-items</h3> </header>
-				<div class="mb_1r d:f fw:w">
+				<div class="mb>*:1r d:f fw:w">
 					<div class="d:f ai:fs fw:w mw:16r bw:medium h:16r mr:1r">
 						<div class="p:.5r bgc:b.1 w:100%">flex-start <code>ai:fs</code></div>
 						<div class="p:1r bgc:b c:w w:50% fw:900">A</div>
@@ -911,8 +911,8 @@
 			<article id="layout__align-self">
 				<header>
 					<h3 class="d:ib ff:m bgc:b c:w p:1r">align-self</h3> </header>
-				<div class="mb_1r d:f fw:w">
-					<div class="mb_1r d:f fw:w">
+				<div class="mb>*:1r d:f fw:w">
+					<div class="mb>*:1r d:f fw:w">
 						<div class="d:f ai:c fw:w mw:16r bw:medium h:16r mr:1r">
 							<div class="as:fs p:.5r bgc:b.1 w:100%">flex-start <code>as:fs</code></div>
 							<div class="as:c p:.5r bgc:b.1 w:100%">center <code>as:c</code></div>
@@ -942,7 +942,7 @@
 			<article id="layout__flex-shrink">
 				<header>
 					<h3 class="d:ib ff:m bgc:b c:w p:1r">flex-shrink</h3> </header>
-				<div class="mb_1r">
+				<div class="mb>*:1r">
 					<div class="d:f">
 						<div class="fb:50% bgc:b p:1r"></div>
 						<div class="fs:0 fb:50% bw:thin p:1r">0 <code>fs:0</code></div>
@@ -968,7 +968,7 @@
 			<article id="layout__flex-basis">
 				<header>
 					<h3 class="d:ib ff:m bgc:b c:w p:1r">flex-basis</h3> </header>
-				<div class="d:f fw:w mb_.5r">
+				<div class="d:f fw:w mb>*:.5r">
 					<div class="fb:a c:w bgc:b d:ib">auto</div> <code>fb:a</code>
 					<div class="fb:100% btw:thin bc:w"></div>
 					<div class="fb:10% c:w bgc:b d:ib">10%</div> <code>fb:10%</code>
