Fixed margin-right for children.

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 	</header>
 	<nav id="toc" class="mb:2r p:2r ox:s ws:nw brw:medium brw:0@xl bc:red c:b.3 fs:1.5r@xl">
 		<ul class="lst:n">
-			<li class="d:f mr_1r mb>*:1r"> <b><a href="#typo">Typography</a></b>
-				<ul class="lst:n d:f mr_.5r">
+			<li class="d:f mr>*:1r mb>*:1r"> <b><a href="#typo">Typography</a></b>
+				<ul class="lst:n d:f mr>*:.5r">
 					<li><a href="#typo__font-family">font-family</a></li>
 					<li><a href="#typo__font-size">font-size</a></li>
 					<li><a href="#typo__line-height">line-height</a></li>
@@ -42,8 +42,8 @@
 					<li><a href="#typo__list-style-type">list-style-type</a></li>
 				</ul>
 			</li>
-			<li class="d:f mr_1r mb>*:1r"> <b><a href="#layout">Layout: Spacing &amp; dimensions</a></b>
-				<ul class="lst:n d:f mr_1r">
+			<li class="d:f mr>*:1r mb>*:1r"> <b><a href="#layout">Layout: Spacing &amp; dimensions</a></b>
+				<ul class="lst:n d:f mr>*:1r">
 					<li><a href="#layout__margin">margin</a></li>
 					<li><a href="#layout__padding">padding</a></li>
 					<li><a href="#layout__width">width</a></li>
@@ -51,8 +51,8 @@
 					<li><a href="#layout__height">height</a></li>
 					<li><a href="#layout__box-sizing">box-sizing</a></li>
 				</ul>
-				<li class="d:f mr_1r mb>*:1r"> <b><a href="#layout">Layout: Positioning</a></b>
-					<ul class="lst:n d:f mr_1r">
+				<li class="d:f mr>*:1r mb>*:1r"> <b><a href="#layout">Layout: Positioning</a></b>
+					<ul class="lst:n d:f mr>*:1r">
 						<li><a href="#layout__display">display</a></li>
 						<li><a href="#layout__position">position</a></li>
 						<li><a href="#layout__z-index">z-index</a></li>
@@ -67,8 +67,8 @@
 						<li><a href="#layout__white-space">white-space</a></li>
 					</ul>
 				</li>
-				<li class="d:f mr_1r mb>*:1r"> <b><a href="#layout__flexbox">Layout: Flexbox</a></b>
-					<ul class="lst:n d:f mr_1r">
+				<li class="d:f mr>*:1r mb>*:1r"> <b><a href="#layout__flexbox">Layout: Flexbox</a></b>
+					<ul class="lst:n d:f mr>*:1r">
 						<li><a href="#layout__flex-direction">flex-direction</a></li>
 						<li><a href="#layout__flex-wrap">flex-wrap</a></li>
 						<li><a href="#layout__justify-content">justify-content</a></li>
@@ -79,8 +79,8 @@
 						<li><a href="#layout__flex-basis">flex-basis</a></li>
 					</ul>
 				</li>
-				<li class="d:f mr_1r"> <b><a href="#theme">Theming</a></b>
-					<ul class="lst:n d:f mr_1r">
+				<li class="d:f mr>*:1r"> <b><a href="#theme">Theming</a></b>
+					<ul class="lst:n d:f mr>*:1r">
 						<li><a href="#theme__border-width">border-width</a></li>
 						<li><a href="#theme__border-style">border-style</a></li>
 						<li><a href="#theme__border-radius">border-radius</a></li>
@@ -743,7 +743,7 @@
 			<article id="layout__flex-wrap">
 				<header>
 					<h3 class="d:ib ff:m bgc:b c:w p:1r">flex-wrap</h3> </header>
-				<div class="mb>*:1r d:f fw:w mr_1r">
+				<div class="mb>*:1r d:f fw:w mr>*:1r">
 					<div class="d:f fw:nw mw:16r p:2r bw:medium ox:s">
 						<div class="mr:1r">nowrap (default) <code>fw:nw</code></div>
 						<div class="fg:0 fs:0 h:1r w:1r br:100% bgc:b m:.25r"></div>
@@ -794,7 +794,7 @@
 			<article id="layout__justify-content">
 				<header>
 					<h3 class="d:ib ff:m bgc:b c:w p:1r">justify-content</h3> </header>
-				<div class="mb>*:1r d:f fw:w mr_1r">
+				<div class="mb>*:1r d:f fw:w mr>*:1r">
 					<div class="d:f jc:fs fw:w mw:16r p:2r bw:medium">
 						<div class="mr:1r">flex-start <code>jc:fs</code></div>
 						<div class="fg:0 fs:0 h:1r w:1r br:100% bgc:b m:.25r"></div>
@@ -1079,7 +1079,7 @@
 					<div class="br:100% p:.5r bgc:w c:purple h:2r w:2r d:f ai:c jc:c p:a t:0 r:0 bs:.0625r">H</div>
 				</header>
 				<p>Including <b>hover classes</b>: <code>bs:.25r:h</code> <br>Hover over the circles for a demo.</p>
-				<div class="d:f fw:w mr_1r">
+				<div class="d:f fw:w mr>*:1r">
 					<div class="bs:.0625r bs:1r:h br:100% mt:1r p:.5r bgc:w d:ib h:8r w:8r d:f fd:c ai:c jc:c">.0625rem <code>bs:.0625r</code> </div>
 					<div class="bs:.125r bs:1r:h br:100% mt:1r p:.5r bgc:w d:ib h:8r w:8r d:f fd:c ai:c jc:c">.125rem <code>bs:.125r</code> </div>
 					<div class="bs:.25r bs:1r:h br:100% mt:1r p:.5r bgc:w d:ib h:8r w:8r d:f fd:c ai:c jc:c">.25rem <code>bs:.25r</code> </div>
