Updated CDN link.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<title>blink | docs</title>
 	<link href="css/blank_minimal.css" rel="stylesheet">
 	<link href="css/layout.css" rel="stylesheet">
-	<link href="https://gitcdn.link/repo/blinkui/blinkui/master/src/blink.css" rel="stylesheet">
+	<link rel="stylesheet" href="https://gitcdn.link/repo/blinkui/blinkui/master/css/blink.min.css">
 	<link rel="apple-touch-icon" href="blink.png">
 	<link rel="mask-icon" href="blink_icon.svg" color="#f53d5c">
 	<link rel="icon" href="blink_icon.png">
