Added css link for local development.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 	<title>blink | docs</title>
 	<link href="css/layout.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://gitcdn.link/repo/blinkui/blinkui/master/css/blink.min.css">
+	<!-- for local development: -->
+	<!-- <link rel="stylesheet" href="../blinkui/css/blink.css">-->
 	<link rel="apple-touch-icon" href="blink.png">
 	<link rel="mask-icon" href="blink_icon.svg" color="#f53d5c">
 	<link rel="icon" href="blink_icon.png">
