--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 	</header>
 	<nav id="toc" class="mb:2r p:2r ox:s ws:nw brw:medium brw:0@XL bc:red c:b.3 fs:1.5r@XL">
 		<ul class="lst:n">
-			<li class="d:f mr>*:1r mb>*:1r"> <b><a href="#typo">Typography</a></b>
+			<li class="d:f mr>*:1r mb>*:1r"><b><a href="#typo">Typography</a></b>
 				<ul class="lst:n d:f mr>*:.5r">
 					<li><a href="#typo__font-family">font-family</a></li>
 					<li><a href="#typo__font-size">font-size</a></li>
@@ -66,6 +66,7 @@
 						<li><a href="#layout__overflow-x">overflow-x</a></li>
 						<li><a href="#layout__overflow-y">overflow-y</a></li>
 						<li><a href="#layout__white-space">white-space</a></li>
+						<!--<li><a href="#layout__visibility">visibility</a></li>-->
 					</ul>
 				</li>
 				<li class="d:f mr>*:1r mb>*:1r"> <b><a href="#layout__flexbox">Layout: Flexbox</a></b>
@@ -112,7 +113,7 @@
 			<article id="typo__font-size">
 				<header class="p:r">
 					<h3 class="d:ib ff:m bgc:b c:w p:1r">font-size</h3>
-					<div class="br:100% p:.5r bgc:w c:red h:2r w:2r d:f ai:c jc:c p:a t:0 r:0 bs:.0625r">R</div>
+					<responsivestyles></responsivestyles>
 				</header>
 				<div class="ox:s ws:nw brw:medium brw:0@L py:1r">
 					<p class="lh:.875"> <span class="fs:16r">16rem</span> <code>fs:16r</code> </p>
@@ -128,7 +129,7 @@
 			<article id="typo__line-height">
 				<header class="p:r">
 					<h3 class="d:ib ff:m bgc:b c:w p:1r">line-height</h3>
-					<div class="br:100% p:.5r bgc:w c:red h:2r w:2r d:f ai:c jc:c p:a t:0 r:0 bs:.0625r">R</div>
+					<responsivestyles></responsivestyles>
 				</header>
 				<div class="ox:s ws:nw brw:medium brw:0@L">
 					<p class="fs:8r lh:.875 byw:thin">0.875 <code class="fs:.875r">lh:.875</code> <br>Berlin</p>
@@ -169,7 +170,7 @@
 			<article id="typo__text-align">
 				<header class="p:r">
 					<h3 class="d:ib ff:m bgc:b c:w p:1r">text-align</h3>
-					<div class="br:100% p:.5r bgc:w c:red h:2r w:2r d:f ai:c jc:c p:a t:0 r:0 bs:.0625r">R</div>
+					<responsivestyles></responsivestyles>
 				</header>
 				<div class="lh:1 w:100%">
 					<p class="ta:l"><span class="fs:2r fs:4r@M">left</span> <code>ta:l</code></p>
@@ -187,14 +188,16 @@
 			<article id="typo__text-decoration">
 				<header>
 					<h3 class="d:ib ff:m bgc:b c:w p:1r">text-decoration</h3> </header>
-				<div><del class="fs:2r fs:4r@M td:n td:u:h">none</del> <code>td:n</code></div>
-				<div><span class="fs:2r fs:4r@M td:u">underline</span> <code>td:u</code> <span class="c:b.3 ff:s fs:i">Also available as a hover style (td:u:h).</span></div>
+				<div><del class="fs:2r fs:4r@M td:n td:u:h bc:red">none</del> <code>td:n</code></div>
+				<div><span class="fs:2r fs:4r@M td:u">underline</span> <code>td:u</code>
+					<hint>Also available as a hover style (td:u:h).</hint>
+				</div>
 				<div><span class="fs:2r fs:4r@M td:lt">line-through</span> <code>td:lt</code></div>
 			</article>
 			<article id="typo__letter-spacing">
 				<header>
 					<h3 class="d:ib ff:m bgc:b c:w p:1r">letter-spacing</h3> </header>
-				<p class="c:b.3 ff:s fs:i">Please notice, that this module makes use of “em” units. Hence the “e”.</p>
+				<hint>Please notice, that this module makes use of “em” units. Hence the “e”.</hint>
 				<div class="fw:100">
 					<div><span class="ls:-.0625e fs:2r fs:4r@M tt:u">-.0625em</span> <code class="fw:i">ls:-.0625<span class="c:red fw:b">e</span></code></div>
 					<div><span class="ls:n fs:2r fs:4r@M tt:u">normal</span> <code class="fw:i">ls:n</code></div>
@@ -222,7 +225,7 @@
 			<article id="layout__margin">
 				<header class="p:r">
 					<h3 class="d:ib ff:m bgc:b c:w p:1r">margin</h3>
-					<div class="br:100% p:.5r bgc:w c:red h:2r w:2r d:f ai:c jc:c p:a t:0 r:0 bs:.0625r">R</div>
+					<responsivestyles></responsivestyles>
 				</header>
 				<h4><code>margin</code></h4>
 				<div class="ox:s ws:nw lh:1 brw:medium brw:0@L">
@@ -422,7 +425,7 @@
 			<article id="layout__padding">
 				<header class="p:r">
 					<h3 class="d:ib ff:m bgc:b c:w p:1r">padding</h3>
-					<div class="br:100% p:.5r bgc:w c:red h:2r w:2r d:f ai:c jc:c p:a t:0 r:0 bs:.0625r">R</div>
+					<responsivestyles></responsivestyles>
 				</header>
 				<div>
 					<div class="fs:1r w:2r h:2r c:w bgc:red br:100% d:f jc:c ai:c my:1r fw:900">?!</div>
@@ -508,18 +511,22 @@
 				<div class="ox:s ws:nw brw:medium brw:0@M">
 					<div class="bs:cb w:16r p:4r ta:c bw:thick d:ib">content-box</div> <code>bs:cb</code> <br>
 					<div class="mt:1r bs:bb w:16r p:4r ta:c bw:thick d:ib">border-box</div> <code>bs:bb</code> </div>
-				<div><a class="c:b.3 ff:s fs:i" href="https://css-tricks.com/box-sizing/" target="_blank">Box Sizing explained</a></div>
+				<hint><svg height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg" class="mr:.25r" style="vertical-align: middle">
+    <path d="M0 0h24v24H0z" fill="none"/>
+    <path d="M3.9 12c0-1.71 1.39-3.1 3.1-3.1h4V7H7c-2.76 0-5 2.24-5 5s2.24 5 5 5h4v-1.9H7c-1.71 0-3.1-1.39-3.1-3.1zM8 13h8v-2H8v2zm9-6h-4v1.9h4c1.71 0 3.1 1.39 3.1 3.1s-1.39 3.1-3.1 3.1h-4V17h4c2.76 0 5-2.24 5-5s-2.24-5-5-5z"/>
+</svg><a class="td:u" href="https://css-tricks.com/box-sizing/" target="_blank">Box Sizing explained</a></hint>
 			</article>
 			<article id="layout__display">
 				<header class="p:r">
 					<h3 class="d:ib ff:m bgc:b c:w p:1r">display</h3>
-					<div class="br:100% p:.5r bgc:w c:red h:2r w:2r d:f ai:c jc:c p:a t:0 r:0 bs:.0625r">R</div>
+					<responsivestyles></responsivestyles>
 				</header>
 				<div> <span class="d:b bgc:b c:w mb:.5r">block <code class="bgc:w.9 c:b">d:b</code></span>
 					<div class="mb:.5r">
 						<div class="d:i bgc:b c:w h:4r">inline </div> <code>d:i</code> </div>
 					<div class="d:ib bgc:b c:w h:4r mb:.5r">inline-block (added a fixed height)</div> <code>d:ib</code> <br>
-					<div class="d:n">none</div> <span class="c:b.3 ff:s fs:i">(none – see source code)</span> <code>d:n</code>
+					<div class="d:n">none</div>
+					<hint>(none – see source code)</hint> <code>d:n</code>
 					<div class="d:f ai:b mb:.5r">
 						<div class="ta:r p:.25r bgc:b c:w bw:thin bc:b">flex</div>
 						<div class="fg:1 p:.25r bw:thin">(added flex-grow: 1)</div> <code class="ml:.25r">d:f</code> </div>
@@ -538,7 +545,7 @@
 			<article id="layout__position">
 				<header class="p:r">
 					<h3 class="d:ib ff:m bgc:b c:w p:1r">position</h3>
-					<div class="br:100% p:.5r bgc:w c:red h:2r w:2r d:f ai:c jc:c p:a t:0 r:0 bs:.0625r">R</div>
+					<responsivestyles></responsivestyles>
 				</header>
 				<div><span class="p:s fs:1.5r">static</span> <code>p:s</code></div>
 				<div><span class="p:r l:-1r fs:1.5r">relative</span> <code>p:r</code></div>
@@ -549,7 +556,8 @@
 								<title>Arrow pointing upwards</title>
 								<path d="M1 20 L16 6 L31 20 L27 24 L16 14 L5 24 z"></path>
 							</svg> </a>
-					</nav> <span class="c:b.3 ff:s fs:i">(fixed – see source code)</span> <code>p:f</code></div>
+					</nav>
+					<hint>(fixed – see source code)</hint> <code>p:f</code></div>
 			</article>
 			<article id="layout__z-index">
 				<header>
@@ -709,7 +717,7 @@
 			<article id="layout__flex-direction">
 				<header class="p:r mb:2r">
 					<h3 class="d:ib ff:m bgc:b c:w p:1r">flex-direction</h3>
-					<div class="br:100% p:.5r bgc:w c:red h:2r w:2r d:f ai:c jc:c p:a t:0 r:0 bs:.0625r">R</div>
+					<responsivestyles></responsivestyles>
 				</header>
 				<div>
 					<div class="d:f fd:r jc:sb w:16r">
@@ -938,7 +946,7 @@
 					<div class="fg:2 brw:medium p:1r bs:.125r:h">2 <code>fg:2</code></div>
 					<div class="fg:4 brw:medium p:1r bs:.125r:h">4 <code>fg:4</code></div>
 				</div>
-				<div class="d:n@M mt:1r c:b.3 ff:s fs:i"> View this demo on a larger screen, to show the effect. </div>
+				<hint> View this demo on a larger screen, to show the effect.</hint>
 			</article>
 			<article id="layout__flex-shrink">
 				<header>
@@ -1007,33 +1015,33 @@
 			<article id="theme__border-width">
 				<header class="p:r">
 					<h3 class="d:ib ff:m bgc:b c:w p:1r">border-width</h3>
-					<div class="br:100% p:.5r bgc:w c:red h:2r w:2r d:f ai:c jc:c p:a t:0 r:0 bs:.0625r">R</div>
+					<responsivestyles></responsivestyles>
 				</header>
-				<h4><code>border-width</code></h4>
+				<h4 class="mt:1r"><code>border-width</code></h4>
 				<div class="bw:thick p:.5r d:ib@M mr:1r mb:.5r">thick <code>bw:thick</code></div>
 				<div class="bw:medium p:.5r d:ib@M mr:1r mb:.5r">medium <code>bw:medium</code></div>
 				<div class="bw:thin p:.5r d:ib@M mr:1r mb:2r">thin <code>bw:thin</code></div>
-				<h4><code>border-top:width</code></h4>
+				<h4 class="mt:1r"><code>border-top:width</code></h4>
 				<div class="btw:thick py:.5r d:ib@M mr:1r mb:.5r">thick <code>btw:thick</code></div>
 				<div class="btw:medium py:.5r d:ib@M mr:1r mb:.5r">medium <code>btw:medium</code></div>
 				<div class="btw:thin py:.5r d:ib@M mr:1r mb:2r">thin <code>btw:thin</code></div>
-				<h4><code>border-right-width</code></h4>
+				<h4 class="mt:1r"><code>border-right-width</code></h4>
 				<div class="brw:thick py:.5r pr:.5r d:ib@M mr:1r mb:.5r">thick <code>brw:thick</code></div>
 				<div class="brw:medium py:.5r pr:.5r d:ib@M mr:1r mb:.5r">medium <code>brw:medium</code></div>
 				<div class="brw:thin py:.5r pr:.5r d:ib@M mr:1r mb:2r">thin <code>brw:thin</code></div>
-				<h4><code>border-bottom:width</code></h4>
+				<h4 class="mt:1r"><code>border-bottom:width</code></h4>
 				<div class="bbw:thick py:.5r d:ib@M mr:1r mb:.5r">thick <code>bbw:thick</code></div>
 				<div class="bbw:medium py:.5r d:ib@M mr:1r mb:.5r">medium <code>bbw:medium</code></div>
 				<div class="bbw:thin py:.5r d:ib@M mr:1r mb:2r">thin <code>bbw:thin</code></div>
-				<h4><code>border-left-width</code></h4>
+				<h4 class="mt:1r"><code>border-left-width</code></h4>
 				<div class="blw:thick py:.5r pl:.5r d:ib@M mr:1r mb:.5r">thick <code>blw:thick</code></div>
 				<div class="blw:medium py:.5r pl:.5r d:ib@M mr:1r mb:.5r">medium <code>blw:medium</code></div>
 				<div class="blw:thin py:.5r pl:.5r d:ib@M mr:1r">thin <code>blw:thin</code></div>
-				<h4><code>border-left-width</code> + <code>border-right-width</code> (x-axis)</h4>
+				<h4 class="mt:1r"><code>border-left-width</code> + <code>border-right-width</code> (x-axis)</h4>
 				<div class="bxw:thick p:.5r d:ib@M mr:1r mb:.5r">thick <code>bxw:thick</code></div>
 				<div class="bxw:medium p:.5r d:ib@M mr:1r mb:.5r">medium <code>bxw:medium</code></div>
 				<div class="bxw:thin p:.5r px:.5r d:ib@M mr:1r mb:2r">thin <code>bxw:thin</code></div>
-				<h4><code>border-top:width</code> + <code>border-bottom:width</code> (y-axis)</h4>
+				<h4 class="mt:1r"><code>border-top:width</code> + <code>border-bottom:width</code> (y-axis)</h4>
 				<div class="byw:thick py:.5r d:ib@M mr:1r mb:.5r">thick <code>byw:thick</code></div>
 				<div class="byw:medium py:.5r d:ib@M mr:1r mb:.5r">medium <code>byw:medium</code></div>
 				<div class="byw:thin py:.5r d:ib@M mr:1r mb:2r">thin <code>byw:thin</code></div>
@@ -1077,7 +1085,7 @@
 			<article id="theme__box-shadow">
 				<header class="p:r">
 					<h3 class="d:ib ff:m bgc:b c:w p:1r">box-shadow</h3>
-					<div class="br:100% p:.5r bgc:w c:purple h:2r w:2r d:f ai:c jc:c p:a t:0 r:0 bs:.0625r">H</div>
+					<hoverstyles></hoverstyles>
 				</header>
 				<p>Including <b>hover classes</b>: <code>bs:.25r:h</code> <br>Hover over the circles for a demo.</p>
 				<div class="d:f fw:w mr>*:1r">
@@ -1302,7 +1310,7 @@
 			<article id="theme__opacity">
 				<header class="p:r">
 					<h3 class="d:ib ff:m bgc:b c:w p:1r">opacity</h3>
-					<div class="br:100% p:.5r bgc:w c:purple h:2r w:2r d:f ai:c jc:c p:a t:0 r:0 bs:.0625r">H</div>
+					<hoverstyles></hoverstyles>
 				</header>
 				<div class="ta:c">
 					<div><span class="o:i o:.1:h p:r r:1r py:.5r px:2r bw:thin bgc:b c:w w:4r fs:1.5r">initial</span> <code>o:i</code></div>
@@ -1321,6 +1329,16 @@
 	</main>
 	<footer class="p:2r bgc:b c:w">Created by <address class="d:i"><a href="mailto:gerbaulet@hs-ulm.de">Damian Gerbaulet</a> (Professor at the University of Applied Sciences Ulm, Germany)</address>. Greatly inspired by <a href="http://basscss" target="_blank">basscss</a> and <a href="http://tachyons.io"
 		    target="_blank">tachyons</a>.</footer>
+	<!-- including custom tags -->
+	<script type="riot/tag" src="tags/hoverstyles.tag"></script>
+	<script type="riot/tag" src="tags/responsivestyles.tag"></script>
+	<script type="riot/tag" src="tags/hint.tag"></script>
+	<!-- riot.js -->
+	<script src="https://cdn.jsdelivr.net/riot/3.2/riot+compiler.min.js"></script>
+	<!-- mounting the tags -->
+	<script>
+		riot.mount('*')
+	</script>
 </body>
 
 </html>
