Fixed responsiveness indicator.

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 			<li class="d:f mr>*:1r mb>*:1r"> <b><a href="#layout">Layout: Spacing &amp; dimensions</a></b>
 				<ul class="lst:n d:f mr>*:1r">
 					<li><a href="#layout__margin">margin</a></li>
+					<!--<li><a href="#layout__margin_child">margin_child</a></li>-->
 					<li><a href="#layout__padding">padding</a></li>
 					<li><a href="#layout__width">width</a></li>
 					<li><a href="#layout__max-width">max-width</a></li>
@@ -141,8 +142,10 @@
 				</div>
 			</article>
 			<article id="typo__font-weight">
-				<header>
-					<h3 class="d:ib ff:m bgc:b c:w p:1r">font-weight</h3> </header>
+				<header class="p:r">
+					<h3 class="d:ib ff:m bgc:b c:w p:1r">font-weight</h3>
+					<responsivestyles></responsivestyles>
+				</header>
 				<div class="ox:s ws:nw lh:1 brw:medium brw:0@L py:1r">
 					<p> <span class="fw:i fs:2r fs:4r@M">initial</span> <code>fw:i</code> </p>
 					<p> <span class="fw:l fs:2r fs:4r@M">lighter</span> <code>fw:l</code> </p>
@@ -467,8 +470,10 @@
 					<div class="w:100vw c:w bgc:b d:ib">100vw</div> <code>w:100vw</code> </div>
 			</article>
 			<article id="layout__max-width">
-				<header>
-					<h3 class="d:ib ff:m bgc:b c:w p:1r">max-width</h3> </header>
+				<header class="p:r">
+					<h3 class="d:ib ff:m bgc:b c:w p:1r">max-width</h3>
+					<responsivestyles></responsivestyles>
+				</header>
 				<div>
 					<div class="fs:1r w:2r h:2r c:w bgc:red br:100% d:f jc:c ai:c my:1r fw:900">?!</div>
 					<p>Similar to the width module</p> <code class="fs:1.5r">mw:75%</code> = <code class="fs:1.5r">max-width:75%</code></div>
@@ -882,8 +887,10 @@
 				</div>
 			</article>
 			<article id="layout__align-items">
-				<header>
-					<h3 class="d:ib ff:m bgc:b c:w p:1r">align-items</h3> </header>
+				<header class="p:r">
+					<h3 class="d:ib ff:m bgc:b c:w p:1r">align-items</h3>
+					<responsivestyles></responsivestyles>
+				</header>
 				<div class="mb>*:1r d:f fw:w">
 					<div class="d:f ai:fs fw:w mw:16r bw:medium h:16r mr:1r">
 						<div class="p:.5r bgc:b.1 w:100%">flex-start <code>ai:fs</code></div>
